--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Rrodrigoh00per",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.0",
+    "mongoose-unique-validator": "^2.0.2",
     "nodemon": "^1.18.9"
   }
 }
