--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "download-file": "^0.1.5",
     "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "mongoose-unique-validator": "^2.0.2",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "serve-index": "^1.9.1"
   }
 }
