--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "download-file": "^0.1.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
+    "google-auth-library": "^2.0.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "mongoose-unique-validator": "^2.0.2",
